; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/libnv/extr_nvlist.c_nvlist_get_pararr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/libnv/extr_nvlist.c_nvlist_get_pararr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @nvlist_get_pararr(i32* %0, i8** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8** %1, i8*** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32* @nvlist_get_array_next(i32* %7)
  store i32* %8, i32** %6, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %18

11:                                               ; preds = %2
  %12 = load i8**, i8*** %5, align 8
  %13 = icmp ne i8** %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %11
  %15 = load i8**, i8*** %5, align 8
  store i8* null, i8** %15, align 8
  br label %16

16:                                               ; preds = %14, %11
  %17 = load i32*, i32** %6, align 8
  store i32* %17, i32** %3, align 8
  br label %22

18:                                               ; preds = %2
  %19 = load i32*, i32** %4, align 8
  %20 = load i8**, i8*** %5, align 8
  %21 = call i32* @nvlist_get_parent(i32* %19, i8** %20)
  store i32* %21, i32** %3, align 8
  br label %22

22:                                               ; preds = %18, %16
  %23 = load i32*, i32** %3, align 8
  ret i32* %23
}

declare dso_local i32* @nvlist_get_array_next(i32*) #1

declare dso_local i32* @nvlist_get_parent(i32*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
